# SM-Ext-VoiceServer

./: Cargo.toml  build.rs  build.sh  build_debug.sh
proto/voiceserver/: voiceserver.proto
sourcepawn/include/: reqwest.inc  voiceserver.inc
src/: coder.rs  extension.cpp  extension.h  extension.rs  ivoicecodec.h  smsdk_config.h
